# Minedu-Scrapper-Identicole

./: .gitignore  data_departments.json  departments_list.json  get_departments_data.py  get_schools.py  get_schools_sequential.py  get_schools_workers.py  insert_data.py  insert_regions_data.py  insert_school_data.py  pyproject.toml  requirements.txt
models/: location_data.py  school.py
