[project]
name = "minedu-scrapper-identicole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "idna==3.10",
    "mysql-connector-python==9.0.0",
    "pydantic-core==2.23.4",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "soupsieve==2.6",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
]
